Fix build
Removed Java 21 language feature usages. Not exactly sure why those used to work.

paper-nms-maven-plugin needed to be updated to handle Paper's new versioning scheme